# bara-world

./: .commitlintrc.json  .env.example  .gitignore  CLAUDE.md  README.md  build.gradle.kts  package-lock.json  package.json  settings.gradle.kts
.claude/: settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/PULL_REQUEST_TEMPLATE/: deploy.md
.github/workflows/: ci-auth.yml  ci-fe.yml  deploy.yml
.husky/: commit-msg  pre-push
agents/default/: .env.example  .gitignore  Dockerfile  Makefile  pyproject.toml
agents/default/app/: config.py  logging.py  main.py  registry.py
agents/default/app/agent/: chat.py
agents/default/app/kafka/: consumer.py  heartbeat.py  producer.py
agents/default/app/models/: a2a.py  messages.py
agents/default/app/routes/: agent_card.py  health.py  task.py
agents/default/tests/: test_agent_card_route.py  test_chat.py  test_config.py  test_consumer.py  test_health.py  test_heartbeat.py  test_messages.py  test_models.py  test_producer.py  test_registry.py  test_stream_route.py  test_task_route.py
apps/api/: Dockerfile  build.gradle.kts
apps/auth/: Dockerfile  build.gradle.kts
apps/fe/: .gitignore  Dockerfile  nginx.conf  package.json  vite.config.ts
build-logic/: build.gradle.kts
clients/web/: Dockerfile  index.html  pnpm-lock.yaml  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
docs/spec/: 00-overview.md  (+9 more)
gradle/: libs.versions.toml
infra/: docker-compose.dev.yml  docker-compose.test.yml
scripts/: deploy-test.sh  docker.sh  infra.sh  k8s.sh  secrets.sh  smoke-test.sh
(+286 files in other folders)
